# MCDock

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  generate_pw_hash.py  pyproject.toml
.github/workflows/: docker-image.yml
backend/: .env.example  .gitignore  Dockerfile.dev  README.md  docker-compose.yml  gunicorn_conf.py  pyproject.toml
backend/mcdock/: __init__.py  main.py
backend/mcdock/core/: config.py  logging_config.py
backend/mcdock/routers/: auth.py  backups.py  instances.py  models.py  schedules.py
backend/mcdock/services/: backup_service.py  docker_service.py  models.py  rcon_service.py
backend/src/mcdock/: __init__.py  main.py
backend/src/mcdock/core/: config.py  models.py
backend/src/mcdock/routers/: backups.py  instances.py  models.py  schedules.py  security.py
backend/src/mcdock/services/: backup_service.py  docker_service.py  rcon_service.py  scheduler.py
backend/src/mcdock/templates/: compose.py
backend/tests/routers/: test_backups.py  test_schedules.py
backend/tests/services/: test_backup_service.py  test_docker_service.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  Router.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  backups.ts  health.ts  instances.ts  schedules.ts  templates.ts  types.ts
frontend/src/components/: InstanceForm.tsx  LoginModal.tsx  Sidebar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useApiReady.ts  useBackups.ts  useInstances.ts  useSchedules.ts
frontend/src/layouts/: AuthLayout.tsx
frontend/src/lib/: api.ts  ws.ts
frontend/src/pages/: CreateInstance.tsx  EditInstance.tsx  Instance.tsx  Instances.tsx  Schedules.tsx
minecraft/proximity/: docker-compose.yml
src/mcdock/: config.py  main.py  security.py
src/mcdock/core/: config.py  models.py
src/mcdock/routers/: backups.py  instances.py  models.py  schedules.py
tests/routers/: test_instances.py
tests/services/: test_rcon_service.py
tests/templates/: test_compose.py
(+14 files in other folders)
