[tool.poetry]
name = "mcdock"
version = "0.1.0"
description = ""
authors = ["Adam Larson <admlars2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.13"
pydantic = "^2.11.7"
pydantic-settings = "^2.9.1"
mcipc = "^2.4.2"
datetime = "^5.5"
apscheduler = "^3.11.0"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
