[tool.poetry]
name = "mcdock"
version = "1.0.0"
description = ""
authors = ["Adam Larson <admlars2@gmail.com>"]
readme = "README.md"
packages = [{ include = "mcdock", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.13"
pydantic = "^2.11.7"
pydantic-settings = "^2.9.1"
mcipc = "^2.4.2"
datetime = "^5.5"
apscheduler = "^3.11.0"
jinja2 = "^3.1.6"
bcrypt = "^4.3.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.poetry.scripts]
dev = "src.mcdock:dev"
prod = "src.mcdock:prod"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
