[tool.poetry]
name = "mcdock"
version = "1.0.0"
description = ""
authors = ["Adam Larson <admlars2@gmail.com>"]
readme = "README.md"
packages = [{ include = "mcdock" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.13"
pydantic = "^2.11.7"
pydantic-settings = "^2.9.1"
mcipc = "^2.4.2"
datetime = "^5.5"
apscheduler = {extras = ["sqalchemy"], version = "^3.11.0"}
jinja2 = "^3.1.6"
bcrypt = "^4.3.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
slowapi = "^0.1.9"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.poetry.scripts]
dev = "mcdock:dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
